[package]
name = "precise"
version = "0.1.3" # remember to update number in readme for major versions
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Full precision decimal representation of f64"
documentation = "https://docs.rs/precise"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/precise"
rust-version = "1.31"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
