[package]
name = "precise"
version = "0.1.5"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting"]
description = "Full precision decimal representation of f64"
documentation = "https://docs.rs/precise"
edition = "2018"
keywords = ["float"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/precise"
rust-version = "1.31"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
