[package]
name = "precise"
version = "0.1.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting"]
description = "Full precision decimal representation of f64"
documentation = "https://docs.rs/precise"
edition = "2018"
keywords = ["float"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/precise"
rust-version = "1.68"

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
